Changed Tab name 'Team' to 'Company' & Fixed Mobile Logo Overlapping Issue,

--- a/css/queries.css
+++ b/css/queries.css
@@ -59,7 +59,7 @@
 @media screen and (max-width:991px) {
 	header {
 		width: 90%;
-		padding-left: 25px;
+		padding-left: 2px;
 	}
 
 	.hero .hero-content {
